reorganized pages, added tags, navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,7 +1,31 @@
 site_name: DiffUSE Logbook
 nav:
   - Home: index.md
-  - 2025-06-24 @ ALS 8.3.1: 
-    - Summary: 20250629_notes/20250629_notes.md
+  - Posts: 
+    - log/index.md
+    - log/tags.md
 theme: 
+  icon:
+    logo: fontawesome/solid/book-open
   name: material
+  palette:
+    primary: blue grey
+  features:
+    - navigation.indexes
+    - navigation.tabs
+    - navigation.tabs.sticky
+    - navigation.expand
+    - navigation.path
+    - toc.integrate
+plugins:
+  - tags
+  - blog:
+      authors: true
+      blog_dir: log
+      blog_toc: true
+      post_url_format: '{file}'
+      post_readtime: false
+      archive: false
+      categories_allowed:
+        - Analysis
+        - Data
