--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -38,3 +38,6 @@ markdown_extensions:
   - attr_list
   - md_in_html
   - pymdownx.blocks.caption
+  - admonition
+  - pymdownx.details
+  - pymdownx.superfences
